--- a/home1.css
+++ b/home1.css
@@ -95,7 +95,7 @@
     height: auto;
     min-height: 35rem;
     padding: 15rem 0;
-    background: linear-gradient(to bottom, rgba(22, 22, 22, .3) 0, rgba(22, 22, 22, .7) 75%, #161616 100%), url(../IMAGES/poverty.png);
+    background: linear-gradient(to bottom, rgba(22, 22, 22, .3) 0, rgba(22, 22, 22, .7) 75%, #161616 100%), url(poverty.png);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -215,7 +215,7 @@
 
 .signup-section {
     padding: 10rem 0;
-    background: linear-gradient(to bottom, rgba(22, 22, 22, .1) 0, rgba(22, 22, 22, .5) 75%, #161616 100%), url(../IMAGES/511146.jpg);
+    background: linear-gradient(to bottom, rgba(22, 22, 22, .1) 0, rgba(22, 22, 22, .5) 75%, #161616 100%), url(511146.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
