--- a/news.css
+++ b/news.css
@@ -1,3 +1,5 @@
+* {}
+
 #mainNav {
     min-height: 56px;
     background-color: #fff
@@ -95,7 +97,7 @@
     height: auto;
     min-height: 35rem;
     padding: 15rem 0;
-    background: linear-gradient(to bottom, rgba(22, 22, 22, .3) 0, rgba(22, 22, 22, .7) 75%, #161616 100%), url(../IMAGES/so.jpg);
+    background: linear-gradient(to bottom, rgba(22, 22, 22, .3) 0, rgba(22, 22, 22, .7) 75%, #161616 100%), url(modi.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
@@ -172,18 +174,16 @@
     background-color: #467370 !important
 }
 
-/*
 .about-section {
     padding-top: 10rem;
     background: linear-gradient(to bottom, #161616 0, rgba(22, 22, 22, .9) 75%, rgba(22, 22, 22, .8) 100%)
 }
-*/
 
 .about-section p {
     margin-bottom: 5rem
 }
 
-.form-section {
+.projects-section {
     padding: 10rem 0
 }
 
@@ -217,7 +217,7 @@
 
 .signup-section {
     padding: 10rem 0;
-    background: linear-gradient(to bottom, rgba(22, 22, 22, .1) 0, rgba(22, 22, 22, .5) 75%, #161616 100%), url(../IMAGES/511146.jpg);
+    background: linear-gradient(to bottom, rgba(22, 22, 22, .1) 0, rgba(22, 22, 22, .5) 75%, #161616 100%), url(511146.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
